--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 </head>
 <body>
   <div class="form-container">
-    <form>
+    <form action="https://script.google.com/macros/s/AKfycbwvbX53xR3cweHkuuyPXzUqzme_3UDUonfQ5e8rhI233S5QOZyE52tAmZyYMapJjywx/exec" method="post">
       <label for="fullName">Full Name <span class="required">*</span></label>
       <input type="text" id="fullName" name="fullName" required>
 
