--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
         <label><input type="radio" name="gender" value="Female"> Female</label>
         <label><input type="radio" name="gender" value="Other"> Other</label>
       </div>
+    <button type="submit" class="submit-btn">Submit</button>
   <Script>
     const scriptURL = 'https://script.google.com/macros/s/AKfycbwfG631ZosbV-uOqqe_wHXCVtgy0n3DadmlgkaKRR-DmdgFAQQYR4vmw1OnYlWC4TlO/exec'
 const form = document.forms['contact-form']
